{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 142,
  "lineage": "23d014cf-efae-e727-d097-366d4a45df72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "swiggy-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054d77598a73100ab",
            "arn": "arn:aws:ec2:ap-south-1:195275645398:elastic-ip/eipalloc-054d77598a73100ab",
            "domain": "vpc",
            "id": "eipalloc-054d77598a73100ab",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-148-15.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.148.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "swiggy-nat-eip"
            },
            "tags_all": {
              "Name": "swiggy-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "swiggy-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:internet-gateway/igw-0488a36a10cc36550",
            "id": "igw-0488a36a10cc36550",
            "owner_id": "195275645398",
            "tags": {
              "Name": "swiggy-igw"
            },
            "tags_all": {
              "Name": "swiggy-igw"
            },
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:195275645398:loadbalancer/app/swiggy-lb/fd82e2183b97bc4e",
            "arn_suffix": "app/swiggy-lb/fd82e2183b97bc4e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "swiggy-lb-1383901935.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:195275645398:loadbalancer/app/swiggy-lb/fd82e2183b97bc4e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "swiggy-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a4bedf1a4feba418"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0995f080eb1f3b363"
              },
              {
                "subnet_id": "subnet-0f7d570b5d103cb06"
              }
            ],
            "subnets": [
              "subnet-0995f080eb1f3b363",
              "subnet-0f7d570b5d103cb06"
            ],
            "vpc_id": "vpc-063e23854fb94e081",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.swiggy-alb-sg-1",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pub-sub-2",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:195275645398:targetgroup/external-tg/f92b6c6c063bb526",
            "arn_suffix": "targetgroup/external-tg/f92b6c6c063bb526",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:195275645398:targetgroup/external-tg/f92b6c6c063bb526",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "external-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "swiggy-natgw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054d77598a73100ab",
            "association_id": "eipassoc-02b49174331ce23ff",
            "connectivity_type": "public",
            "id": "nat-0d02b081c1eb01436",
            "network_interface_id": "eni-0366d5e75a324869a",
            "private_ip": "10.0.0.14",
            "public_ip": "35.154.148.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f7d570b5d103cb06",
            "tags": {
              "Name": "swiggy-natgw-01"
            },
            "tags_all": {
              "Name": "swiggy-natgw-01"
            }
          },
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "swiggy-app-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:route-table/rtb-045a04df8bb7fbc05",
            "id": "rtb-045a04df8bb7fbc05",
            "owner_id": "195275645398",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d02b081c1eb01436",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "swiggy-app-rt"
            },
            "tags_all": {
              "Name": "swiggy-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "swiggy-web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:route-table/rtb-07dc51abfb1310a5e",
            "id": "rtb-07dc51abfb1310a5e",
            "owner_id": "195275645398",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0488a36a10cc36550",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "swiggy-web-rt"
            },
            "tags_all": {
              "Name": "swiggy-web-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.swiggy-igw",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca04d2451d4cfb35",
            "route_table_id": "rtb-07dc51abfb1310a5e",
            "subnet_id": "subnet-0f7d570b5d103cb06"
          },
          "dependencies": [
            "aws_internet_gateway.swiggy-igw",
            "aws_route_table.swiggy-web-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090acc3a6ebbe2dfa",
            "route_table_id": "rtb-07dc51abfb1310a5e",
            "subnet_id": "subnet-0995f080eb1f3b363"
          },
          "dependencies": [
            "aws_internet_gateway.swiggy-igw",
            "aws_route_table.swiggy-web-rt",
            "aws_subnet.swiggy-pub-sub-2",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd1386e23cc74d8d",
            "route_table_id": "rtb-045a04df8bb7fbc05",
            "subnet_id": "subnet-00934efc3e199430b"
          },
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_route_table.swiggy-app-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pvt-sub-1",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0850c1281f093f7d2",
            "route_table_id": "rtb-045a04df8bb7fbc05",
            "subnet_id": "subnet-09d361705208fec69"
          },
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_route_table.swiggy-app-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pvt-sub-2",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f932a2c2a280ebe4",
            "route_table_id": "rtb-045a04df8bb7fbc05",
            "subnet_id": "subnet-0b0daf50b9ce542b0"
          },
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_route_table.swiggy-app-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pvt-sub-3",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "swiggy-rt-as-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0d2c01cdfa73494",
            "route_table_id": "rtb-045a04df8bb7fbc05",
            "subnet_id": "subnet-00dbb45642077f346"
          },
          "dependencies": [
            "aws_eip.swiggy-nat-eip",
            "aws_internet_gateway.swiggy-igw",
            "aws_nat_gateway.swiggy-natgw-01",
            "aws_route_table.swiggy-app-rt",
            "aws_subnet.swiggy-pub-sub-1",
            "aws_subnet.swiggy-pvt-sub-4",
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swiggy-alb-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:security-group/sg-0a4bedf1a4feba418",
            "description": "Security group for Swiggy Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4bedf1a4feba418",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "swiggy-alb-sg-1",
            "name_prefix": "",
            "owner_id": "195275645398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Swiggy ALB SG"
            },
            "tags_all": {
              "Name": "Swiggy ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swiggy-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:security-group/sg-0e70ddba709c91093",
            "description": "Security group for Swiggy Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e70ddba709c91093",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "swiggy-db-sg",
            "name_prefix": "",
            "owner_id": "195275645398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Swiggy DB SG"
            },
            "tags_all": {
              "Name": "Swiggy DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swiggy-ec2-asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:security-group/sg-0a540e4e3708bae6f",
            "description": "Security group for EC2 instances in ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a540e4e3708bae6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "swiggy-ec2-asg-sg",
            "name_prefix": "",
            "owner_id": "195275645398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swiggy-ec2-asg-sg"
            },
            "tags_all": {
              "Name": "swiggy-ec2-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swiggy-ec2-asg-sg-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:security-group/sg-0971253755d9ebdc3",
            "description": "Security group for Swiggy EC2 instances in ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0971253755d9ebdc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "swiggy-ec2-asg-sg-app",
            "name_prefix": "",
            "owner_id": "195275645398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swiggy-ec2-asg-sg-app"
            },
            "tags_all": {
              "Name": "swiggy-ec2-asg-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:subnet/subnet-0f7d570b5d103cb06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7d570b5d103cb06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "195275645398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pub-sub-1"
            },
            "tags_all": {
              "Name": "swiggy-pub-sub-1"
            },
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:subnet/subnet-0995f080eb1f3b363",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0995f080eb1f3b363",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "195275645398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pub-sub-2"
            },
            "tags_all": {
              "Name": "swiggy-pub-sub-2"
            },
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:subnet/subnet-00934efc3e199430b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00934efc3e199430b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275645398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pvt-sub-1"
            },
            "tags_all": {
              "Name": "swiggy-pvt-sub-1"
            },
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:subnet/subnet-09d361705208fec69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d361705208fec69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275645398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pvt-sub-2"
            },
            "tags_all": {
              "Name": "swiggy-pvt-sub-2"
            },
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pvt-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:subnet/subnet-0b0daf50b9ce542b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0daf50b9ce542b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275645398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pvt-sub-3"
            },
            "tags_all": {
              "Name": "swiggy-pvt-sub-3"
            },
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "swiggy-pvt-sub-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:subnet/subnet-00dbb45642077f346",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dbb45642077f346",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275645398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "swiggy-pvt-sub-4"
            },
            "tags_all": {
              "Name": "swiggy-pvt-sub-4"
            },
            "vpc_id": "vpc-063e23854fb94e081"
          },
          "dependencies": [
            "aws_vpc.swiggy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "swiggy-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195275645398:vpc/vpc-063e23854fb94e081",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa4dfe57622531e2",
            "default_route_table_id": "rtb-01482cd4b5429e766",
            "default_security_group_id": "sg-0968de264cc525d2b",
            "dhcp_options_id": "dopt-0331632bf979fc4bc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063e23854fb94e081",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01482cd4b5429e766",
            "owner_id": "195275645398",
            "tags": {
              "Name": "swiggy-vpc"
            },
            "tags_all": {
              "Name": "swiggy-vpc"
            }
          }
        }
      ]
    }
  ]
}